# Advent-of-Code-2022

./: Cargo.toml  README.md
1-calorie-counting/src/: main.rs
10-cathode-ray-tube/: Cargo.toml
10-cathode-ray-tube/src/: main.rs
11-monkey-in-the-middle/: Cargo.toml
11-monkey-in-the-middle/src/: main.rs
12-hill-climbing-algorithm/: Cargo.toml
12-hill-climbing-algorithm/src/: main.rs
13-distress-signal/: Cargo.toml
13-distress-signal/src/: main.rs
14-regolith-reservoir/: Cargo.toml
14-regolith-reservoir/src/: main.rs
15-beacon-exclusion-zone/: Cargo.toml
15-beacon-exclusion-zone/src/: main.rs
16-proboscidea-volcanium/: Cargo.toml
16-proboscidea-volcanium/src/: main.rs
17-pyroclastic-flow/: Cargo.toml
17-pyroclastic-flow/src/: main.rs
18-boiling-boulders/: Cargo.toml
18-boiling-boulders/src/: main.rs
19-not-enough-minerals/: Cargo.toml
19-not-enough-minerals/src/: main.rs
2-rock-paper-scissors/src/: main.rs
3-rucksack-reorganization/src/: main.rs
4-camp-cleanup/src/: main.rs
5-supply-stacks/: Cargo.toml  input_ex
5-supply-stacks/src/: command.rs  main.rs  stacks.rs
6-tuning-trouble/: Cargo.toml
6-tuning-trouble/src/: main.rs
7-no-space-left-on-device/: Cargo.toml
7-no-space-left-on-device/src/: main.rs
8-treetop-tree-house/: Cargo.toml
8-treetop-tree-house/src/: main.rs
9-rope-bridge/: Cargo.toml
9-rope-bridge/src/: main.rs
