[workspace]
members = [
    "1-calorie-counting",
    "2-rock-paper-scissors",
    "3-rucksack-reorganization",
    "4-camp-cleanup",
    "5-supply-stacks",
    "6-tuning-trouble",
    "7-no-space-left-on-device",
    "8-treetop-tree-house",
    "9-rope-bridge",
    "10-cathode-ray-tube",
    "11-monkey-in-the-middle",
    "12-hill-climbing-algorithm",
    "13-distress-signal",
    "14-regolith-reservoir",
    "15-beacon-exclusion-zone",
    "16-proboscidea-volcanium",
    "17-pyroclastic-flow",
    "18-boiling-boulders",
]
